--- a/templates/home.html
+++ b/templates/home.html
@@ -53,7 +53,7 @@
     .parent {
         background-color: #FBEEC1;
         width: 70%;
-        height: 50%;
+        min-height: 50%;
         position: absolute;
         display: flex;
         flex-direction: column;
@@ -66,8 +66,8 @@
 
     .child-2 {
         background-color: #8D8741;
-        min-height: 20%;
-        width: 75%;
+        min-height: %;
+        width: 85%;
         padding: 10px;
     }
 
